todo-app/manifests/frontend/rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout

metadata:
  name: todo-frontend-dep
  namespace: todo

spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo-frontend

  strategy:
    canary:
      steps:
      - setWeight: 50
      - analysis:
          templates:
          - templateName: restart-rate

  template:
    metadata:
      labels:
        app: todo-frontend

    spec:
      containers:
        - name: todo-frontend
          image: mikaalaoutinen/todo-frontend:latest
