todo-app/manifests/frontend/service-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-frontend-nodeport-svc
spec:
  type: NodePort
  selector:
    app: todo-frontend
  ports:
    - name: http
      nodePort: 30080
      protocol: TCP
      port: 8082
      targetPort: 3000
