todo-app/manifests/frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-frontend-svc
  namespace: todo
spec:
  type: ClusterIP
  selector:
    app: todo-frontend
  ports:
    - port: 1234
      protocol: TCP
      targetPort: 3000
